# chat4000-hermes-plugin

./: .gitignore  AGENTS.md  MIGRATION.md  README.md  __init__.py  install.sh  plugin.yaml  pyproject.toml  setup.md
chat4000_hermes_plugin/: __init__.py  adapter.py  analytics.py  cli.py  crypto.py  error_log.py  html_card_tool.py  install_wizard.py  key_store.py  log_rotate.py  logging_setup.py  machine_ids.py  onboarding.py  package_info.py  pairing.py  pairing_logger.py  plugin_hooks.py  posthog_dsn_generated.py  protocol_types.py  reconnect.py  registrar_config.py  runtime_logger.py  setup_flow.py  telemetry.py  telemetry_dsn_generated.py  ws_keepalive.py
chat4000_hermes_plugin/dispatch/: tool_call_dispatcher.py
chat4000_hermes_plugin/matrix/: __init__.py  commands.py  creds_store.py  crypto_driver.py  cursor_store.py  gateway_client.py  hermes_adapter.py  media.py  pair_codes_store.py  pair_listener.py  registrar_client.py  rooms.py  session.py  sliding_sync.py  tool_transcript.py  turns.py  users_store.py  version_poller.py
chat4000_hermes_plugin/transport/: mock.py  relay.py
docs/: patches-to-remember.md  things-to-implement.md
scripts/: installer.py  prepare_release.py
src/: accounts.py  ack_store.py  adapter.py  crypto.py  key_store.py  pairing.py  reconnect.py  recv_ack_batcher.py  session_binding.py  telemetry.py
src/dispatch/: stream_dispatcher.py  tool_call_dispatcher.py
src/transport/: __init__.py  mock.py  registry.py  relay.py
tests/: conftest.py
tests/unit/: test_accounts.py  test_ack_store.py  test_analytics_identity.py  test_cli_pairing_funnel.py  test_cli_uninstall.py  test_crypto.py  test_gateway_cursor.py  test_html_card_tool.py  test_key_store.py  test_log_rotate.py  test_matrix_autosession.py  test_matrix_commands.py  test_matrix_crypto_driver.py  test_matrix_media.py  test_matrix_rooms.py  test_matrix_session.py  test_matrix_sliding_sync.py  test_pair_listener.py  test_plugin_hooks_v2.py  test_protocol_types.py  test_reconnect.py  test_recv_ack_batcher.py  test_registrar_client.py  test_session_binding.py  test_setup_flow.py  test_status_lifecycle.py  test_stream_dispatcher.py  test_telegram_suppress.py  test_title_poll.py  test_tool_call_dispatcher.py  test_tool_start_routing.py  test_tool_transcript.py  test_transport_mock.py  test_turns_tool.py  test_typing_lifecycle.py  test_version_poller.py
