[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat4000-hermes-plugin"
version = "1.1.2"
description = "chat4000 platform adapter for Hermes Agent — Matrix E2EE link to iOS/macOS/CLI apps"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11"
authors = [{ name = "NeonNode Ltd", email = "contact@chat4000.com" }]

dependencies = [
  # v2 (Matrix) transport: the gateway WS client.
  "websockets>=12.0",
  # `cryptography` powers AES-256-CTR encrypted media attachments (matrix/media.py).
  "cryptography>=42.0",
  "sentry-sdk>=2.0",
  "qrcode>=7.4",
  # `click` is used by the standalone `chat4000` console script.
  # Hermes already ships it transitively, but declare it explicitly so
  # the script also works when the plugin is installed outside Hermes.
  "click>=8.0",
  # `rich` powers the `chat4000 wizard` interactive installer (colorful
  # banners, panels, progress bars). Pure-Python, no compiled deps.
  "rich>=13.0",
  # `posthog` powers product analytics (install funnel, pair success,
  # message-throughput buckets). Same opt-out as Sentry telemetry.
  "posthog>=3.0",
  # The Matrix E2EE engine (matrix-sdk-crypto OlmMachine) as a prebuilt PyO3
  # wheel. NOT on PyPI — the installer passes `--find-links` to the GitHub
  # Release so pip pulls the right wheel per platform (no Rust for users).
  "chat4000-pyvodozemac>=0.1.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0"]

[dependency-groups]
# uv reads this for `uv sync`. Hermes installs the package via its own
# uv-managed venv (`uv pip install` from pyproject.toml's deps), so this
# dev group is only used by `uv sync` during local development.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15",
    "mypy>=1.13",
]

[project.entry-points."hermes_agent.plugins"]
# Pip-install discovery path. The value is the MODULE name (not
# `module:register`) — Hermes does `getattr(ep.load(), "register", None)`.
chat4000 = "chat4000_hermes_plugin"

[project.scripts]
# Standalone CLI: `chat4000 pair`, `chat4000 status`, etc. Required on
# Hermes versions that don't expose ctx.register_cli (v0.14.0 doesn't).
# Lives in Hermes' venv `bin/` after `pip install`.
chat4000 = "chat4000_hermes_plugin.cli:main"

[tool.setuptools.packages.find]
include = ["chat4000_hermes_plugin*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
# Plugin is loaded by Hermes' Python process — we don't ship our own
# Python or build into a venv at install time. `uv sync` only sets up
# the local dev environment used by tests.
package = true

# ─── Production code standards (CLAUDE.md → ~/.claude/standards/python.md) ───

[tool.ruff]
target-version = "py311"   # matches requires-python (>=3.11), not the standard's py312
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "BLE", "S", "ANN", "I", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
# asserts + lax typing are fine in tests (standard).
"tests/**" = ["S101", "ANN"]
# The installer + release scripts legitimately shell out (subprocess with
# trusted, code-controlled argv) and print to stdout — S603/S607 are expected.
"scripts/**" = ["S603", "S607"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
warn_unreachable = true
no_implicit_optional = true
# Generated at release time (gitignored); not part of the typed surface.
exclude = ["_dsn_generated\\.py$"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# Untyped/absent-stub external deps: the Hermes host process, the PyO3 wheel,
# and third-party libs that ship no type information.
module = [
    "gateway.*",
    "hermes_cli.*",
    "hermes_agent.*",
    # Host-process state DB (state.db reader for the title poll) — same
    # category as gateway.*: only importable inside the Hermes host.
    "hermes_state",
    "chat4000_pyvodozemac.*",
    "posthog.*",
    "qrcode.*",
    # `rich` (wizard UI) and `yaml` (Hermes config edit) are runtime-only deps,
    # installed in Hermes' venv, absent from the local dev/CI venv — no stubs to
    # check against here. Same category as posthog/qrcode above.
    "rich.*",
    "yaml",
]
ignore_missing_imports = true
